--- a/crispy-broccoli.cabal
+++ b/crispy-broccoli.cabal
@@ -22,11 +22,14 @@ library
                     Syntax
                     Printer
                     Internal
+                    Connection
   -- other-modules:
   -- other-extensions:
     build-depends:
                   base
                 , text
+                , postgresql-libpq
+                , postgresql-simple
   hs-source-dirs:      src
   default-language:    Haskell2010
 
