--- a/crispy-broccoli.cabal
+++ b/crispy-broccoli.cabal
@@ -44,6 +44,7 @@ test-suite tests
                        , tasty-hunit
                        , tasty-quickcheck
                        , text
+                       , postgresql-libpq
 
 
 
