--- a/crispy-broccoli.cabal
+++ b/crispy-broccoli.cabal
@@ -23,6 +23,7 @@ library
                     Printer
                     Internal
                     Connection
+                    FromSql
   -- other-modules:
   -- other-extensions:
     build-depends:
@@ -30,6 +31,9 @@ library
                 , text
                 , postgresql-libpq
                 , postgresql-simple
+                , bytestring
+                , attoparsec
+                , vector
   hs-source-dirs:      src
   default-language:    Haskell2010
 
