--- a/crispy-broccoli.cabal
+++ b/crispy-broccoli.cabal
@@ -24,6 +24,7 @@ library
                     Internal
                     Connection
                     FromSql
+                    Query
   -- other-modules:
   -- other-extensions:
     build-depends:
@@ -42,6 +43,7 @@ test-suite tests
     main-is: Test.hs
     -- other-modules: Test.Util
     hs-source-dirs: test
+    default-language:    Haskell2010
     build-depends:       base
                        , crispy-broccoli
                        , tasty
