--- a/crispy-broccoli.cabal
+++ b/crispy-broccoli.cabal
@@ -35,6 +35,8 @@ library
                 , bytestring
                 , attoparsec
                 , vector
+                , free
+                , transformers
   hs-source-dirs:      src
   default-language:    Haskell2010
 
