--- a/crispy-broccoli.cabal
+++ b/crispy-broccoli.cabal
@@ -25,6 +25,7 @@ library
                     Connection
                     FromSql
                     Query
+                    ToSql
   -- other-modules:
   -- other-extensions:
     build-depends:
@@ -37,6 +38,7 @@ library
                 , vector
                 , free
                 , transformers
+                , contravariant
   hs-source-dirs:      src
   default-language:    Haskell2010
 
