--- a/package.yaml
+++ b/package.yaml
@@ -14,6 +14,8 @@ tests:
     source-dirs: test
     main: Test.hs
     dependencies:
+      - generic-random
+      - QuickCheck
       - tasty
       - tasty-hunit
       - tasty-quickcheck
