--- a/package.yaml
+++ b/package.yaml
@@ -34,6 +34,7 @@ dependencies:
     - free
     - postgresql-libpq
     - postgresql-simple
+    - template-haskell
     - text
     - transformers
     - vector
