new RowDecoder internal representation, Oid checking

--- a/package.yaml
+++ b/package.yaml
@@ -32,6 +32,7 @@ dependencies:
     - bytestring
     - contravariant
     - free
+    - mtl
     - postgresql-binary
     - postgresql-libpq
     - postgresql-simple
