--- a/package.yaml
+++ b/package.yaml
@@ -26,6 +26,7 @@ build-tools:
   - happy
       
 dependencies:
+    - aeson
     - array
     - base
     - binary-parser
@@ -41,6 +42,7 @@ dependencies:
     - template-haskell
     - text
     - th-lift-instances
+    - time
     - transformers
     - vector
 
