--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -24,7 +24,7 @@ jobs:
       postgres:
         image: postgres:12.2
         ports: [ "5432:5432" ]
-        # options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5 --start-period 60s
 
     steps:
     - uses: actions/checkout@v2
