don't run tests in CI, because they all require Postgres

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -27,5 +27,6 @@ jobs:
       run: |
         cabal configure --enable-tests
         cabal build
-    - name: Run tests
-      run: cabal test
+    # disabled until I sort out postgres
+    # - name: Run tests
+    #   run: cabal test
