JSON instances for error types

--- a/package.yaml
+++ b/package.yaml
@@ -41,6 +41,7 @@ dependencies:
     - mtl
     - postgresql-binary
     - postgresql-libpq
+    - scientific
     - syb
     - template-haskell
     - text
