--- a/package.yaml
+++ b/package.yaml
@@ -41,26 +41,25 @@ build-tools:
   - happy
       
 dependencies:
-    - aeson
-    - array
-    - base
-    - binary-parser
-    - bytestring
-    - bytestring-strict-builder
-    - contravariant
-    - free
-    - mtl
-    - postgresql-binary
-    - postgresql-libpq
-    - scientific
-    - syb
-    - template-haskell
-    - text
-    - th-lift-instances
-    - time
-    - transformers
-    - uuid
-    - vector
+    - aeson >= 1.3.1
+    - array >= 0.5.2
+    - base >= 4.11 # GHC 8.4; need CPP semigroup/monoid to go earlier
+    - binary-parser >= 0.5.5
+    - bytestring >= 0.10.8
+    - bytestring-strict-builder >= 0.4.5
+    - contravariant >= 1.4.1
+    - free >= 5.0.2
+    - mtl >= 2.2.2
+    - postgresql-binary >= 0.12.1
+    - postgresql-libpq >= 0.9.4
+    - scientific >= 0.3.6
+    - template-haskell >= 2.13.0
+    - text >= 1.2.3
+    - th-lift-instances >= 0.1.11
+    - time >= 1.8.0
+    - transformers >= 0.5.5
+    - uuid >= 1.3.13
+    - vector >= 0.12.0
 
 default-extensions:
   - OverloadedStrings
