--- a/package.yaml
+++ b/package.yaml
@@ -33,7 +33,9 @@ tests:
     dependencies:
       - preql
       - bytestring
+      - generic-random
       - postgresql-libpq
+      - QuickCheck
       - tasty
       - tasty-hunit
       - text
