--- a/package.yaml
+++ b/package.yaml
@@ -62,7 +62,7 @@ dependencies:
     - syb
     - template-haskell >= 2.13.0
     - text >= 1.2.3
-    - th-lift-instances >= 0.1.11
+    - th-lift-instances >= 0.1.12 # NonEmpty
     - time >= 1.8.0
     - transformers >= 0.5.5
     - uuid >= 1.3.13
