add initial benchmark

--- a/package.yaml
+++ b/package.yaml
@@ -68,3 +68,13 @@ dependencies:
 default-extensions:
   - OverloadedStrings
   - DataKinds
+
+benchmarks:
+  pgbench:
+    main: Bench.hs
+    source-dirs:
+      - benchmark
+    dependencies:
+      - preql
+      - criterion
+      - deepseq
