--- a/package.yaml
+++ b/package.yaml
@@ -32,38 +32,43 @@ tests:
     main: Test.hs
     dependencies:
       - preql
-      - bytestring
-      - postgresql-libpq
-      - tasty
-      - tasty-hunit
-      - text
-      - uuid
-      - vector
+      - tasty >= 1.1 && < 1.4
+      - tasty-hunit >= 0.10 && < 0.11
 
 build-tools:
   - alex
   - happy
       
 dependencies:
-    - aeson >= 1.3.1
-    - array >= 0.5.2
-    - base >= 4.11 # GHC 8.4; need CPP semigroup/monoid to go earlier
-    - binary-parser >= 0.5.5
-    - bytestring >= 0.10.8
-    - bytestring-strict-builder >= 0.4.5
-    - contravariant >= 1.4.1
-    - free >= 5.0.2
-    - mtl >= 2.2.2
-    - postgresql-binary >= 0.12.1
-    - postgresql-libpq >= 0.9.4
-    - scientific >= 0.3.6
-    - template-haskell >= 2.13.0
-    - text >= 1.2.3
-    - th-lift-instances >= 0.1.11
-    - time >= 1.8.0
-    - transformers >= 0.5.5
-    - uuid >= 1.3.13
-    - vector >= 0.12.0
+    - aeson >= 1.3.1 && < 1.6
+    - array >= 0.5.2 && < 0.6
+    - base >= 4.11 && < 4.15 # GHC 8.4; need CPP semigroup/monoid to go earlier
+    - binary-parser >= 0.5.5 && < 0.6
+    - bytestring >= 0.10.8 && < 0.11
+    - bytestring-strict-builder >= 0.4.5 && < 0.5
+    - contravariant >= 1.4.1 && < 1.6
+    - free >= 5.0.2 && < 5.2
+    - mtl >= 2.2.2 && < 2.3
+    - postgresql-binary >= 0.12.1 && < 0.13
+    - postgresql-libpq >= 0.9.4 && < 0.10
+    - scientific >= 0.3.6 && < 0.4
+    - template-haskell >= 2.13.0 && < 2.17
+    - text >= 1.2.3 && < 1.3
+    - th-lift-instances >= 0.1.11 && < 0.2
+    - time >= 1.8.0 && < 1.10
+    - transformers >= 0.5.5 && < 0.6
+    - uuid >= 1.3.13 && < 1.4
+    - vector >= 0.12.0 && < 0.13
 
 default-extensions:
   - OverloadedStrings
+
+benchmarks:
+  pgbench:
+    main: Bench.hs
+    source-dirs:
+      - benchmark
+    dependencies:
+      - preql
+      - criterion
+      - deepseq
