synthetic load for performance testing

--- a/package.yaml
+++ b/package.yaml
@@ -78,3 +78,13 @@ benchmarks:
       - preql
       - criterion
       - deepseq
+
+executables:
+  preql-load:
+    main: Load.hs
+    source-dirs:
+      - load-test
+    dependencies:
+      - preql
+      - deepseq
+      - stm
