--- a/package.yaml
+++ b/package.yaml
@@ -88,4 +88,4 @@ executables:
       - preql
       - deepseq
       - stm
-    ghc-options: "-rtsopts -threaded"
+    ghc-options: "-rtsopts -threaded -eventlog"
