fixed-length run, eventlog

--- a/package.yaml
+++ b/package.yaml
@@ -82,4 +82,4 @@ executables:
       - preql
       - deepseq
       - stm
-    ghc-options: "-rtsopts -threaded"
+    ghc-options: "-rtsopts -threaded -eventlog"
