--- a/package.yaml
+++ b/package.yaml
@@ -25,6 +25,7 @@ extra-doc-files:
 
 library:
   source-dirs: [src]
+  ghc-options: "-O2"
 
 tests:
   tests:
@@ -87,5 +88,7 @@ executables:
     dependencies:
       - preql
       - deepseq
+      - optparse-applicative
+      - resource-pool
       - stm
-    ghc-options: "-rtsopts -threaded -eventlog"
+    ghc-options: "-rtsopts -threaded -eventlog -O2 -fprof-auto -fprof-cafs"
