--- a/package.yaml
+++ b/package.yaml
@@ -67,6 +67,8 @@ dependencies:
     - transformers >= 0.5.5
     - uuid >= 1.3.13
     - vector >= 0.12.0
+    - vector-sized
 
 default-extensions:
   - OverloadedStrings
+  - DataKinds
