--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -43,12 +43,12 @@ jobs:
         ARGS: ${{ matrix.plan.resolver }}
     - name: Build
       run: |
-        stack --no-terminal $ARGS test --no-run-tests --bench --no-run-benchmarks --haddock --no-haddock-deps
+        stack --no-terminal $ARGS test --no-run-tests --bench --no-run-benchmarks
       env:
         ARGS: ${{ matrix.plan.resolver }}
     - name: Run tests
       run: |
-        stack --no-terminal $ARGS test --bench --no-run-benchmarks --haddock --no-haddock-deps
+        stack --no-terminal $ARGS test --bench --no-run-benchmarks
       env:
         PREQL_TESTS_DB: postgres
         PGHOST: localhost
