--- a/package.yaml
+++ b/package.yaml
@@ -36,6 +36,8 @@ tests:
       - QuickCheck >= 2.13.2 && < 2.14.3
       - tasty >= 1.2.3 && < 1.4.1
       - tasty-hunit >= 0.10.0 && < 0.10.1
+      - hedgehog
+      - tasty-hedgehog
 
 build-tools:
   - alex
