--- a/package.yaml
+++ b/package.yaml
@@ -32,8 +32,8 @@ tests:
     main: Test.hs
     dependencies:
       - preql
+      - containers
       - generic-random >= 1.3.0.1 && < 1.3.1
-      - QuickCheck >= 2.13.2 && < 2.14.3
       - tasty >= 1.2.3 && < 1.4.1
       - tasty-hunit >= 0.10.0 && < 0.10.1
       - hedgehog
