fixed hedgehog seed in github actions

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -56,3 +56,4 @@ jobs:
         PGPORT: 5432
         PGUSER: postgres
         PGPASSWORD: postgres
+        TASTY_HEDGEHOG_REPLAY: 'Size 10 Seed 112358 3'
