--- a/package.yaml
+++ b/package.yaml
@@ -32,12 +32,12 @@ tests:
     main: Test.hs
     dependencies:
       - preql
-      - containers
-      - generic-random >= 1.3.0.1 && < 1.3.1
+      - containers >= 0.6.2.1
+      - generic-random < 1.3.1
       - tasty >= 1.2.3 && < 1.4.1
       - tasty-hunit >= 0.10.0 && < 0.10.1
-      - hedgehog
-      - tasty-hedgehog
+      - hedgehog >= 1.0.3
+      - tasty-hedgehog >= 1.0
 
 build-tools:
   - alex
@@ -53,17 +53,17 @@ dependencies:
   - contravariant >= 1.5.2 && < 1.5.4
   - mtl >= 2.2.2 && < 2.2.3
   - postgresql-binary >= 0.12.2 && < 0.12.4
-  - postgresql-libpq >= 0.9.4.3 && < 0.9.5
+  - postgresql-libpq >= 0.9.4.2 && < 0.9.5
   - scientific >= 0.3.6.2 && < 0.3.7
   - syb >= 0.7.1 && < 0.7.2
   - template-haskell >= 2.15.0.0 && < 2.17
   - text >= 1.2.3.2 && < 1.2.5
-  - th-lift-instances >= 0.1.18 && < 0.1.19
+  - th-lift-instances >= 0.1.17 && < 0.1.19
   - time >= 1.9.3 && < 1.9.4
   - transformers >= 0.5.6.2 && < 0.5.7
   - uuid >= 1.3.13 && < 1.3.14
   - vector >= 0.12.1.2 && < 0.12.2
-  - vector-sized >= 1.4.2 && < 1.4.4
+  - vector-sized >= 1.4.1 && < 1.4.4
 
 default-extensions:
   - OverloadedStrings
