--- a/preql.cabal
+++ b/preql.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.18
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 879f97b745bc46aaf20841fb18d7111d51a84fb4a3194c782f7e99c972a8ead3
+-- hash: 0036497a0a6053fb3fbcb37c9cb9399c232ad4a7c1de337f2233e26f33aeba3d
 
 name:           preql
 version:        0.4
@@ -77,26 +77,26 @@ library
       alex
     , happy
   build-depends:
-      aeson >=1.4.7.1 && <1.5.6
-    , array >=0.5.4.0 && <0.5.5
-    , base >=4.13.0.0 && <4.15
-    , binary-parser >=0.5.6 && <0.6
-    , bytestring >=0.10.10.0 && <0.10.13
-    , bytestring-strict-builder >=0.4.5.3 && <0.4.6
-    , contravariant >=1.5.2 && <1.5.4
-    , mtl >=2.2.2 && <2.2.3
-    , postgresql-binary >=0.12.2 && <0.12.4
-    , postgresql-libpq >=0.9.4.2 && <0.9.5
-    , scientific >=0.3.6.2 && <0.3.7
-    , syb >=0.7.1 && <0.7.2
-    , template-haskell >=2.15.0.0 && <2.17
-    , text >=1.2.3.2 && <1.2.5
-    , th-lift-instances >=0.1.17 && <0.1.19
-    , time >=1.9.3 && <1.9.4
-    , transformers >=0.5.6.2 && <0.5.7
-    , uuid >=1.3.13 && <1.3.14
-    , vector >=0.12.1.2 && <0.12.2
-    , vector-sized >=1.4.1 && <1.4.4
+      aeson >=1.4.7.1
+    , array >=0.5.4.0
+    , base >=4.13.0.0
+    , binary-parser >=0.5.6
+    , bytestring >=0.10.10.0
+    , bytestring-strict-builder >=0.4.5.3
+    , contravariant >=1.5.2
+    , mtl >=2.2.2
+    , postgresql-binary >=0.12.2
+    , postgresql-libpq >=0.9.4.2
+    , scientific >=0.3.6.2
+    , syb >=0.7.1
+    , template-haskell >=2.15.0.0
+    , text >=1.2.3.2
+    , th-lift-instances >=0.1.17
+    , time >=1.9.3
+    , transformers >=0.5.6.2
+    , uuid >=1.3.13
+    , vector >=0.12.1.2
+    , vector-sized >=1.4.1
   default-language: Haskell2010
 
 test-suite tests
@@ -117,31 +117,31 @@ test-suite tests
       alex
     , happy
   build-depends:
-      aeson >=1.4.7.1 && <1.5.6
-    , array >=0.5.4.0 && <0.5.5
-    , base >=4.13.0.0 && <4.15
-    , binary-parser >=0.5.6 && <0.6
-    , bytestring >=0.10.10.0 && <0.10.13
-    , bytestring-strict-builder >=0.4.5.3 && <0.4.6
+      aeson >=1.4.7.1
+    , array >=0.5.4.0
+    , base >=4.13.0.0
+    , binary-parser >=0.5.6
+    , bytestring >=0.10.10.0
+    , bytestring-strict-builder >=0.4.5.3
     , containers >=0.6.2.1
-    , contravariant >=1.5.2 && <1.5.4
+    , contravariant >=1.5.2
     , generic-random <1.3.1
     , hedgehog >=1.0.3
-    , mtl >=2.2.2 && <2.2.3
-    , postgresql-binary >=0.12.2 && <0.12.4
-    , postgresql-libpq >=0.9.4.2 && <0.9.5
+    , mtl >=2.2.2
+    , postgresql-binary >=0.12.2
+    , postgresql-libpq >=0.9.4.2
     , preql
-    , scientific >=0.3.6.2 && <0.3.7
-    , syb >=0.7.1 && <0.7.2
-    , tasty >=1.2.3 && <1.4.1
+    , scientific >=0.3.6.2
+    , syb >=0.7.1
+    , tasty >=1.2.3
     , tasty-hedgehog >=1.0
-    , tasty-hunit >=0.10.0 && <0.10.1
-    , template-haskell >=2.15.0.0 && <2.17
-    , text >=1.2.3.2 && <1.2.5
-    , th-lift-instances >=0.1.17 && <0.1.19
-    , time >=1.9.3 && <1.9.4
-    , transformers >=0.5.6.2 && <0.5.7
-    , uuid >=1.3.13 && <1.3.14
-    , vector >=0.12.1.2 && <0.12.2
-    , vector-sized >=1.4.1 && <1.4.4
+    , tasty-hunit >=0.10.0
+    , template-haskell >=2.15.0.0
+    , text >=1.2.3.2
+    , th-lift-instances >=0.1.17
+    , time >=1.9.3
+    , transformers >=0.5.6.2
+    , uuid >=1.3.13
+    , vector >=0.12.1.2
+    , vector-sized >=1.4.1
   default-language: Haskell2010
