--- a/preql.cabal
+++ b/preql.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.18
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 2dc77fae4bd58a45bebd5f27ad6baf0b91312257052260b0d00ba5310915e0c8
+-- hash: eeadcaa0e1829873dd2c3c82cc64426e7aec352dffbc2dbab64df31d4bd8d97f
 
 name:           preql
 version:        0.5
@@ -80,7 +80,7 @@ library
   build-depends:
       aeson >=1.4.7.1
     , array >=0.5.4.0
-    , base >=4.13.0.0
+    , base >=4.13.0.0 && <4.15
     , binary-parser >=0.5.6
     , bytestring >=0.10.10.0
     , bytestring-strict-builder >=0.4.5.3
@@ -114,7 +114,7 @@ executable preql-load
   build-depends:
       aeson >=1.4.7.1
     , array >=0.5.4.0
-    , base >=4.13.0.0
+    , base >=4.13.0.0 && <4.15
     , binary-parser >=0.5.6
     , bytestring >=0.10.10.0
     , bytestring-strict-builder >=0.4.5.3
@@ -159,7 +159,7 @@ test-suite tests
   build-depends:
       aeson >=1.4.7.1
     , array >=0.5.4.0
-    , base >=4.13.0.0
+    , base >=4.13.0.0 && <4.15
     , binary-parser >=0.5.6
     , bytestring >=0.10.10.0
     , bytestring-strict-builder >=0.4.5.3
@@ -200,7 +200,7 @@ benchmark pgbench
   build-depends:
       aeson >=1.4.7.1
     , array >=0.5.4.0
-    , base >=4.13.0.0
+    , base >=4.13.0.0 && <4.15
     , binary-parser >=0.5.6
     , bytestring >=0.10.10.0
     , bytestring-strict-builder >=0.4.5.3
