--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 /TAGS
 /dist
 /result
-/dist-newstyle
+dist-newstyle
 *_flymake.hs
 /src/Syntax/Parser.hs
 /src/Syntax/Parser.info
-/.stack-work/
+.stack-work/
 TAGS
-/cabal.project.local
-/cabal.project.freeze
+cabal.project.local
+cabal.project.freeze
